# PokemonCardGame

./: CMakeLists.txt  main.cpp
include/Controller/: MainController.h
include/Model/Card/: card.h
include/Model/Card/EnergyCard/: energycard.h
include/Model/Card/Player/: player.h
include/Model/Card/PokemonCard/: pokemoncard.h
include/Model/Card/TrainerCard/: trainercard.h
include/View/: MainWindow.h
include/View/split_screen/: split_screen.h
src/Controller/: MainController.cpp
src/Model/Card/: card.cpp
src/Model/Card/EnergyCard/: energycard.cpp
src/Model/Card/Player/: player.cpp
src/Model/Card/PokemonCard/: pokemoncard.cpp
src/Model/Card/TrainerCard/: trainercard.cpp
src/View/: MainWindow.cpp
src/View/split_screen/: split_screen.cpp
